# acleebot

./: .gitignore  .twitter_oauth  Makefile  Pipfile  Procfile  README.md  backup.py  bot.py  broiestbot.ini  ch.py  channels.json.txt  chatango.py  commands.csv  commands.py  config.py  dependencies.sh  env.conf  logger.py  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini  wsgi.py
.circleci/: config.yml
.github/workflows/: pythonapp.yml
application/: __init__.py  bot.py  ch.py  charts.py  commands.py  database.py  db.py  google_storage.py  log.py  logging.py  logic.py
application/commands/: __init__.py  avatar.py  basic.py  channel.py  crypto.py  giphy.py  nba.py  nhl.py  random.py  reddit.py  scrape.py  spam.py  stock.py  storage.py  urban.py
application/tables/: __init__.py  cmd.py  weather.py
bot/: __init__.py  ch.py  command_listing.csv  commands.py  db.py
broiestbot/: __init__.py  afterdark.py  bot.py  ch.py  commands.py  logging.py  logic.py  nightmode.py  table.py
broiestbot/clients/: __init__.py  crypto.py  database.py  logging.py  stock.py
broiestbot/commands/: __init__.py  afterdark.py  bball.py  definitions.py  embeds.py  footy.py  images.py  lyrics.py  markets.py  misc.py  movies.py  olympics.py  playstation.py  previews.py  tuner.py  video.py  weather.py
broiestbot/commands/footy/: __init__.py  goldenboot.py  lineups.py  live.py  odds.py  predicts.py  standings.py  today.py  upcoming.py  util.py
broiestbot/commands/images/: __init__.py  giphy.py  random.py  reddit.py  storage.py
broiestbot/commands/mlb/: __init__.py  live.py  today.py  upcoming.py  util.py
broiestbot/commands/nba/: __init__.py  live.py  standings.py  today.py  upcoming.py
broiestbot/commands/nfl/: __init__.py
broiestbot/commands/polls/: __init__.py  change.py  tovala.py
broiestbot/commands/polls/tests/: conftest.py  test_tovala.py
broiestbot/commands/tests/: __init__.py
broiestbot/data/: __init__.py  chats.py  users.py
broiestbot/moderation/: __init__.py  ban.py  phrases.py  users.py
broiestbot/services/: __init__.py  database.py  gcs.py  logging.py
broiestbot/tests/: test_logger.py
chatango/: _ws.py  ch.py
clients/: __init__.py  crypto.py  database.py  ddog.py  gcs.py  geo.py  psn.py  stock.py  youtube.py
data/: command_listing.csv  command_listing.numbers
database/: __init__.py  models.py
tests/: test_logger.py
