[tool.poetry]
name = "broiestbot"
version = "0.1.0"
description = "Chat bot for the Chatango platform."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/toddbirchard/broiestbot/"
repository = "https://github.com/toddbirchard/broiestbot/"
documentation = "https://github.com/toddbirchard/broiestbot/blob/master/README.md"
keywords = [
    "Chatbot",
    "Chat",
    "Chatango",
    "Bot",
    "Python",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
sqlalchemy = "*"
pymysql = "*"
google-cloud-storage = "*"
loguru = "*"
plotly = "*"
chart-studio = "*"
emoji = "*"
bs4 = "*"
wikipedia-api = "*"
cinemagoer = "*"
ipdata = "*"
kaleido = "0.2.1"
boto = "*"
botocore = "*"
redis = "*"
praw = "*"
ddtrace = "*"
uWSGI = "*"
python-dotenv = "*"
twilio = "*"
datadog = "*"
lyricsgenius = "*"
pytz = "*"
pandas = "*"
html5lib = "*"
google-api-python-client = "*"
PyMultiDictionary = "*"
metadata-parser = "*"
PSNAWP = "*"
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
py-youtube = "^1.1.7"
python-youtube = "^0.9.0"

[tool.poetry.scripts]
run = "wsgi:init_bot"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/broiestbot/issues"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["broiestbot", "chatango", "clients", "config", "logger"]

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable="C0103,C0301,W0703,W0621"

